<resources>
    <string name="app_name">My Blog</string>
    <string name="action_settings">Account Setup</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="app_logout">Logout</string>
    <string name="add_blog">Add Blog</string>
    <string name="action_search">Search</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email Address</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_phone_no">Phone No</string>
    <string name="hint_full_name">Full Name..</string>
    <string name="hint_email">Email ..</string>
    <string name="hint_password">Password..</string>
    <string name="hint_confirm_password">Confirm Password..</string>
    <string name="hint_phone_no">Phone..</string>
    <string name="txt_profile_name">Full Name</string>
    <string name="bt_save_profile">Save</string>
    <string name="hint_profile_name">Your Name ..</string>
    <string name="edt_add_description">Add Description..</string>
    <string name="edt_add_title">Add Title..</string>
    <string name="bt_post_blog">Post Blog</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_notifications">Notifications</string>
    <string name="bottom_menu_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_user_name">Username</string>
    <string name="txt_blog_date">Jan 4,2020</string>
    <string name="txt_blog_title">Blog Title</string>
    <string name="txt_blog_description">Blog Description Comes here...</string>
    <string name="txt_likes_no">0 Likes</string>
</resources>
